Native methods are replaced with Vanara library methods. Added support for saving of window size & splitter width (Issue #8)

--- a/FileExplorer/App.config
+++ b/FileExplorer/App.config
@@ -82,6 +82,27 @@
             <setting name="Language" serializeAs="String">
                 <value>en</value>
             </setting>
+            <setting name="LeftPaneWidth" serializeAs="String">
+                <value>400</value>
+            </setting>
+            <setting name="RightPaneWidth" serializeAs="String">
+                <value>400</value>
+            </setting>
+            <setting name="WindowTop" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowLeft" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowWidth" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowHeight" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowState" serializeAs="String">
+                <value>Maximized</value>
+            </setting>
         </FileExplorer.Properties.Settings>
     </userSettings>
     <startup>
