Fixed: #13 Location of default folders Done: #17 Add an option to not expand Navigation Pane to open folder General Performance Improvements

--- a/FileExplorer/App.config
+++ b/FileExplorer/App.config
@@ -2,7 +2,7 @@
 <configuration>
     <configSections>
         <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">            
             <section name="FileExplorer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -103,6 +103,9 @@
             <setting name="WindowState" serializeAs="String">
                 <value>Maximized</value>
             </setting>
+			<setting name="ExpandFocusedNode" serializeAs="String">
+				<value>True</value>
+			</setting>
         </FileExplorer.Properties.Settings>
     </userSettings>
     <startup>
