--- a/FileExplorer/FileExplorer.csproj
+++ b/FileExplorer/FileExplorer.csproj
@@ -43,6 +43,9 @@
     <Reference Include="AlphaFS">
       <HintPath>..\Library\AlphaFS.dll</HintPath>
     </Reference>
+    <Reference Include="AsyncKeyedLock, Version=6.1.1.0, Culture=neutral, PublicKeyToken=c6dde91429ba0f2f, processorArchitecture=MSIL">
+      <HintPath>..\packages\AsyncKeyedLock.6.1.1\lib\netstandard2.0\AsyncKeyedLock.dll</HintPath>
+    </Reference>
     <Reference Include="CommandLine">
       <HintPath>..\Library\CommandLine.dll</HintPath>
     </Reference>
@@ -129,7 +132,13 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.3\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -212,7 +221,6 @@
     <Compile Include="Core\CustomFunctions.cs" />
     <Compile Include="Helpers\FileSystemWatcherHelper.cs" />
     <Compile Include="Core\Utilities.cs" />
-    <Compile Include="Helpers\LockProvider.cs" />
     <Compile Include="Messages\CommandMessage.cs" />
     <Compile Include="Messages\NotificationMessage.cs" />
     <Compile Include="Model\FileModelCollection.cs" />
@@ -398,6 +406,7 @@
     <EmbeddedResource Include="Properties\Resources.tr.resx" />
     <None Include="App.config" />
     <Resource Include="Assets\Fonts\AwesomeSolid.ttf" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
