--- a/FileExplorer/packages.config
+++ b/FileExplorer/packages.config
@@ -1,6 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AlphaFS" version="2.2.6" targetFramework="net48" />
   <package id="AsyncKeyedLock" version="6.1.1" targetFramework="net48" />
+  <package id="CommandLineParser" version="2.9.1" targetFramework="net48" />
+  <package id="DevExpress.Mvvm.CodeGenerators" version="22.1.1" targetFramework="net48" />
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.1.0" targetFramework="net48" />
+  <package id="LiteDB" version="4.1.4" targetFramework="net48" />
+  <package id="Mono.Cecil" version="0.11.4" targetFramework="net48" />
+  <package id="NLog" version="5.1.1" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="Vanara.Core" version="3.4.13" targetFramework="net48" />
+  <package id="Vanara.PInvoke.ComCtl32" version="3.4.13" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Cryptography" version="3.4.13" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Gdi32" version="3.4.13" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Kernel32" version="3.4.13" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Ole" version="3.4.13" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Rpc" version="3.4.13" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Security" version="3.4.13" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Shared" version="3.4.13" targetFramework="net48" />
+  <package id="Vanara.PInvoke.Shell32" version="3.4.13" targetFramework="net48" />
+  <package id="Vanara.PInvoke.ShlwApi" version="3.4.13" targetFramework="net48" />
+  <package id="Vanara.PInvoke.User32" version="3.4.13" targetFramework="net48" />
+  <package id="Vanara.WPF.Extensions" version="3.4.13" targetFramework="net48" />
 </packages>
