StaticTaskbarIcon and StaticTaskbarTitle settings added.

--- a/FileExplorer/App.config
+++ b/FileExplorer/App.config
@@ -103,9 +103,15 @@
             <setting name="WindowState" serializeAs="String">
                 <value>Maximized</value>
             </setting>
-			<setting name="ExpandFocusedNode" serializeAs="String">
-				<value>True</value>
-			</setting>
+            <setting name="ExpandFocusedNode" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="StaticTaskbarIcon" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="StaticTaskbarTitle" serializeAs="String">
+                <value>False</value>
+            </setting>
         </FileExplorer.Properties.Settings>
     </userSettings>
     <startup>
