--- a/FileExplorer.Extension.RichTextPreview/FileExplorer.Extension.RichTextPreview.csproj
+++ b/FileExplorer.Extension.RichTextPreview/FileExplorer.Extension.RichTextPreview.csproj
@@ -22,5 +22,9 @@
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
+    
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy /y &quot;$(TargetDir)*.dll&quot; &quot;$(SolutionDir)FileExplorer\bin\$(ConfigurationName)\PreviewExtensions\$(ProjectName)\&quot;" />
+  </Target>
 
 </Project>
