--- a/FileExplorer.Extension.PdfPreview/FileExplorer.Extension.PdfPreview.csproj
+++ b/FileExplorer.Extension.PdfPreview/FileExplorer.Extension.PdfPreview.csproj
@@ -36,4 +36,8 @@
     <Resource Include="Assets\ZoomOut.svg" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy /y &quot;$(TargetDir)*.dll&quot; &quot;$(SolutionDir)FileExplorer\bin\$(ConfigurationName)\PreviewExtensions\$(ProjectName)\&quot;" />
+  </Target>
+
 </Project>
