#32 File and Folder unified sorting setting added #33 Disable virtualization setting added

--- a/FileExplorer/App.config
+++ b/FileExplorer/App.config
@@ -112,6 +112,12 @@
             <setting name="StaticTaskbarTitle" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="UnifiedSorting" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Virtualization" serializeAs="String">
+                <value>True</value>
+            </setting>
         </FileExplorer.Properties.Settings>
     </userSettings>
     <startup>
