--- a/FileExplorer/Properties/Settings.settings
+++ b/FileExplorer/Properties/Settings.settings
@@ -95,5 +95,11 @@
     <Setting Name="StaticTaskbarTitle" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="UnifiedSorting" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="Virtualization" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
