--- a/FileExplorer/App.config
+++ b/FileExplorer/App.config
@@ -8,8 +8,7 @@
     </configSections>
     <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
         <targets>
-            <target name="logfile" xsi:type="File" fileName="Log.txt"
-                    layout="${longdate}|${level:uppercase=true}|${logger}|${message}|${exception:format=shortType,message,method:maxInnerExceptionLevel=5:innerFormat=shortType,message,method}}" />
+            <target name="logfile" xsi:type="File" fileName="Log.txt" layout="${longdate}|${level:uppercase=true}|${logger}|${message}|${exception:format=shortType,message,method:maxInnerExceptionLevel=5:innerFormat=shortType,message,method}}" />
             <target name="logconsole" xsi:type="Console" />
         </targets>
         <rules>
@@ -126,6 +125,10 @@
    <runtime>
        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
            <probing privatePath="Library" />
+          <dependentAssembly>
+             <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+             <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+          </dependentAssembly>
        </assemblyBinding>
    </runtime>
 </configuration>
