--- a/FileExplorer/packages.config
+++ b/FileExplorer/packages.config
@@ -10,11 +10,14 @@
   <package id="Mono.Cecil" version="0.11.4" targetFramework="net48" />
   <package id="NLog" version="5.1.3" targetFramework="net48" />
   <package id="Onova" version="2.6.7" targetFramework="net48" />
+  <package id="Syroot.Windows.IO.KnownFolders" version="1.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Claims" version="4.0.1" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="4.0.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net48" />
   <package id="System.Text.Json" version="7.0.2" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
