--- a/FileExplorer/App.config
+++ b/FileExplorer/App.config
@@ -141,6 +141,10 @@
              <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
              <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
           </dependentAssembly>
+          <dependentAssembly>
+             <assemblyIdentity name="System.Security.Principal.Windows" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+             <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+          </dependentAssembly>
        </assemblyBinding>
    </runtime>
 </configuration>
